syntax = "proto3";

package api.apify.poi.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "apify-poi-data/api/apify/poi/v1;poi_v1";

service PoiService {
  // 1. Spatial-only
  rpc ListPOIInBox (ListPOIInBoxRequest) returns (ListPOIResponse) {
    option (google.api.http) = {
      get: "/v1/poi/box"
    };
  }

  // 3. Spatial + Category substring match
  rpc ListPOIInBoxWithCategorySearch (ListPOIInBoxWithCategorySearchRequest) returns (ListPOIResponse) {
    option (google.api.http) = {
      get: "/v1/poi/box/category"
    };
  }

  rpc ListPOIAlongRoute (ListPOIAlongRouteRequest) returns (ListPOIResponse) {
    option (google.api.http) = {
      get: "/v1/poi/route"
    };
  }
  
  rpc ListPOIAlongRouteWithCategory (ListPOIAlongRouteWithCategoryRequest) returns (ListPOIResponse) {
    option (google.api.http) = {
      get: "/v1/poi/route/category"
    };
  }

  rpc ListPOIByH3Cells (ListPOIsByH3CellsRequest) returns (stream ListPOIResponse) {
    option (google.api.http) = {
      get: "/v1/poi/h3"
    };
  }
}

message ListPOIsByH3CellsRequest {
  repeated string parent_cells = 2; // Array of parent h3 cell indexes
}

message ListPOIInBoxRequest {
  double min_x = 1; // longitude
  double min_y = 2; // latitude
  double max_x = 3; // longitude
  double max_y = 4; // latitude
}

message ListPOIInBoxWithCategorySearchRequest {
  double min_x = 1; // longitude
  double min_y = 2; // latitude
  double max_x = 3; // longitude
  double max_y = 4; // latitude
  string category_substring = 5; // e.g. "pizza"
}

message ListPOIAlongRouteRequest {
  double a_lon = 1;
  double a_lat = 2;
  double b_lon = 3;
  double b_lat = 4;
  int32  buffer = 5; // meters
}

message ListPOIAlongRouteWithCategoryRequest {
  double a_lon = 1;
  double a_lat = 2;
  double b_lon = 3;
  double b_lat = 4;
  int32  buffer = 5; // meters
  string category_substring = 6; // e.g. "pizza"
}

message ListPOIResponse {
  repeated Poi pois = 1;
}

message OpeningHour {
  string day = 1;
  string hours = 2;
}

message Poi {
  int32 id = 1;
  string search_string = 2;
  int32 rank = 3;
  string search_page_url = 4;
  bool is_advertisement = 5;
  string title = 6;
  string sub_title = 7;
  string price = 8;
  string category_name = 9;
  string address = 10;
  string neighborhood = 11;
  string street = 12;
  string city = 13;
  string postal_code = 14;
  string state = 15;
  string country_code = 16;
  string website = 17;
  string phone = 18;
  string phone_unformatted = 19;
  bool claim_this_business = 20;
  double location_lat = 21;
  double location_lng = 22;
  double total_score = 23;
  bool permanently_closed = 24;
  bool temporarily_closed = 25;
  string place_id = 26;
  repeated string categories = 27;
  string fid = 28;
  string cid = 29;
  int32 reviews_count = 30;
  int32 images_count = 31;
  repeated string image_categories = 32;
  string scraped_at = 33;
  string google_food_url = 34;
  google.protobuf.Struct hotel_ads = 35;
  repeated OpeningHour opening_hours = 36;
  google.protobuf.Struct people_also_search = 37;
  google.protobuf.Struct places_tags = 38;
  google.protobuf.Struct reviews_tags = 39;
  google.protobuf.Struct additional_info = 40;
  google.protobuf.Struct gas_prices = 41;
  string url = 42;
  string image_url = 43;
  string kgmid = 44;
  string geom = 45;
  string h3_index = 46;
  string search_page_loaded_url = 47;
  string description = 48;
  string located_in = 49;
  string plus_code = 50;
  string menu = 51;
  string reserve_table_url = 52;
  string hotel_stars = 53;
  string hotel_description = 54;
  string check_in_date = 55;
  string check_out_date = 56;
  google.protobuf.Struct similar_hotels_nearby = 57;
  google.protobuf.Struct hotel_review_summary = 58;
  string popular_times_live_text = 59;
  int32 popular_times_live_percent = 60;
  google.protobuf.Struct popular_times_histogram = 61;
  google.protobuf.Struct questions_and_answers = 62;
  google.protobuf.Struct updates_from_customers = 63;
  google.protobuf.Struct web_results = 64;
  string parent_place_url = 65;
  google.protobuf.Struct table_reservation_links = 66;
  google.protobuf.Struct booking_links = 67;
  google.protobuf.Struct order_by = 68;
  string images = 69;
  repeated string image_urls = 70;
  google.protobuf.Struct reviews = 71;
  google.protobuf.Struct user_place_note = 72;
  google.protobuf.Struct restaurant_data = 73;
  google.protobuf.Struct owner_updates = 74;
}